Bug 616700 - Transparent plugins rendering not clearing surface correctly. r=roc a=npodb